...

            <Tab.Screen
                name={Routes.HISTORY_STACK}
                component={HistoryStack}
                options={{
                    tabBarLabel: Routes.HISTORY,
                    tabBarTestID: "history-tab",
                    tabBarIcon: ({ focused }) => renderActivityIcon(focused, "icon-history", LL.TAB_TITLE_ACTIVITY()),
                }}
            />

            <Tab.Screen
                name="SettingsStack"
                component={SettingsStack}
                options={{
                    tabBarLabel: "Settings",
                    tabBarTestID: "settings-tab",
                    tabBarIcon: ({ focused }) => renderTabBarIcon(focused, "icon-more-horizontal", LL.TAB_TITLE_MORE()),
                }}
            />
        </Tab.Navigator>
    )
}
...
