...
import { useI18nContext } from "~i18n"
import { Activity, FungibleToken, TransactionOutcomes } from "~Model"
import { ActivityItemRenderer } from "~Screens/Flows/App/ActivityScreen/Components/ActivityItemRenderer"
import { DateUtils, StringUtils } from "~Utils"

enum SectionName {
    TODAY = "Today",
    YESTERDAY = "Yesterday",
}

type ActivitySection = {
    title: string
    data: Activity[]
...
