...
                renderItem={({ item }) => (
                    <SelectableAccountCard
                        account={item}
                        onPress={onAccountPress}
                        selected={item.address === selectedAccount?.address}
                        balanceToken={balanceToken}
                        testID="selectAccount"
                    />
                )}
                ItemSeparatorComponent={ItemSeparatorComponent}
                SectionSeparatorComponent={SectionSeparatorComponent}
                key={selectedKey}
                showsVerticalScrollIndicator={false}
...
