#transactions_account_delegation.yaml
appId: org.vechain.veworld.app
onFlowStart:
    - runFlow: ../setup_reset/setupApp.yaml
---
- tapOn:
      id: "settings-tab"
## Tap back button if visible (may be hidden by notification snackbar)
- runFlow:
      when:
          visible:
              id: "BackButtonHeader-BaseIcon-backButton"
      commands:
          - tapOn:
                id: "BackButtonHeader-BaseIcon-backButton"
- tapOn:
      id: "Transactions"
- tapOn:
      id: "button-ACCOUNT"
- tapOn:
      id: "selectAccount"
      index: 0
- assertVisible:
      id: "Selected_Delegation_Account"
      enabled: false
